--- a/static/main.css
+++ b/static/main.css
@@ -28,7 +28,7 @@ body {
 	text-align: center;
 }
 
-#pie_chart, #exit_table, #exchange_table {
+#type_chart, #pie_chart, #exit_table, #exchange_table {
 	display: none;
 }
 
